Importing IWD_Opc legacy release 3.2.3

--- a/app/design/frontend/base/default/template/opc/onepage/login.phtml
+++ b/app/design/frontend/base/default/template/opc/onepage/login.phtml
@@ -1,5 +1,5 @@
 <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
-<p class="left"><a class="login-trigger signin-modal" data-modal="modal-login"><?php echo $this->__('LOGIN')?></a></p>
+<p class="text-login"><?php echo $this->__('Already registered?') ?> <a class="login-trigger" data-modal="modal-login"><?php echo $this->__('LOGIN HERE')?></a></p>
 
 <div class="md-modal md-effect-7" id="modal-login">
 	<div class="md-content">
@@ -45,8 +45,13 @@
 	</div>
 </div>
 <div class="md-overlay"></div>	
+	
+	
 <script type="text/javascript">
     //<![CDATA[
         var dataForm1 = new VarienForm('login-form', true);
     //]]>
 </script>
+<div class="clear move-columns"></div>
+
+
