--- a/app/design/frontend/base/default/layout/iwd_opc.xml
+++ b/app/design/frontend/base/default/layout/iwd_opc.xml
@@ -3,13 +3,13 @@
 	
 	<default>
 		<reference name="top.links">
-			<remove name="checkout_cart_link"/>
-			<block type="checkout/links" name="checkout_cart_link_custom"><action method="addCartLink" ></action></block>
+			<remove name="checkout_cart_link" />
+			<block type="checkout/links" name="checkout_cart_link_custom"><action method="addCartLink"></action></block>
             <block type="opc/links" name="checkout_cart_link_custom"><action method="addCheckoutLink"></action></block>
         </reference>
 		<!--  LOGIN WITH PAYPAL -->
         <reference name="head">
-        	<action method="addItem" ifconfig="opc/paypallogin/status"><type>skin_js</type><name>js/iwd/opc/login.js</name></action>            
+            <action method="addJs" ifconfig="opc/paypallogin/status"><script>iwd/opc/login.js</script></action>
             <action method="addItem" ifconfig="opc/paypallogin/status"><type>skin_css</type><name>css/iwd/opc/paypal.css</name><params/></action>
         </reference>
 	</default>
@@ -22,36 +22,24 @@
         </reference>
         
         <reference name="head">		
-        	<action method="addItem"><type>skin_js</type><name>js/iwd/opc/checkout.js</name></action>
-        	<action method="addItem"><type>skin_js</type><name>js/iwd/opc/extend.js</name></action>
-        	<action method="addJs"><file>mage/directpost.js</file></action>        
-			<action method="addItem"><type>skin_js</type><name>js/opcheckout.js</name></action>
-			<action method="addItem" ifconfig="opc/paypal/status"><type>skin_js</type><name>js/iwd/opc/lipp.js</name></action>
+			<action method="addJs"><script>iwd/opc/checkout.js</script></action>
+			<action method="addJs"><script>iwd/opc/extend.js</script></action>
+			<action method="addItem"><type>skin_js</type><name>js/opcheckout.js</name></action>					
             <action method="addCss"><stylesheet>css/iwd/opc/opc.css</stylesheet></action>
-            <action method="addJs" ifconfig="payment/braintree/active"><file>braintree/braintree-1.3.4.js</file></action>
-            <action method="addCss" ifconfig="payment/braintree/active"><stylesheet>braintree/css/braintree.css</stylesheet></action>
 		</reference>
         
         <reference name="content">
 			<block type="opc/wrapper" name="es.checkout.container" template="opc/wrapper.phtml">
-			
-					 <block type="page/html_wrapper" name="paypal.button" translate="label">
-		                <label>PayPal Express Checkout Shortcut Wrapper</label>
-		                <block type="paypal/express_shortcut" name="product.info.addtocart.paypal" template="opc/paypal/express/shortcut.phtml">
-		                    <!-- action method="setIsInCatalogProduct"><value>1</value></action -->
-		                </block>
-		            </block>
-			
 			
 					<!--  LOGIN FORM  -->
 					<block type="opc/onepage_login" name="checkout.onepage.login" as="login" template="opc/onepage/login.phtml">
 						<block type="customer/account_forgotpassword" name="forgotPassword" template="opc/customer/form/forgotpassword.phtml"/>	
 					</block>
 				 	<!-- BILLING FORM -->
-                    <block type="opc/onepage_billing" name="checkout.onepage.billing" as="billing" template="opc/onepage/billing.phtml"/>
+                    <block type="checkout/onepage_billing" name="checkout.onepage.billing" as="billing" template="opc/onepage/billing.phtml"/>
 
                     <!-- SHIPPING FORM -->
-                    <block type="opc/onepage_shipping" name="checkout.onepage.shipping" as="shipping" template="opc/onepage/shipping.phtml"/>
+                    <block type="checkout/onepage_shipping" name="checkout.onepage.shipping" as="shipping" template="opc/onepage/shipping.phtml"/>
                     
                     <!-- COUPON FORM -->
                     <block type="checkout/cart_coupon" name="checkout.cart.coupon" as="coupon" template="opc/onepage/coupon.phtml"/>
@@ -72,45 +60,38 @@
 	                    </block>
                 	</block>
                 	
-                	<block type="checkout/agreements" name="checkout.onepage.agreements" as="agreements" template="opc/onepage/agreements.phtml"/>
-					<block type="opc/onepage_subscribed" template="opc/onepage/review/subscribed.phtml" name="opc.newsletters" /> 
+                	
                     
 			</block>
         </reference>
         
         <!--  PAYPAL EXPRESS LIGHTBOX -->
         <reference name="before_body_end">
-			<block type="opc/lipp" name="opc.lipp.js" as="">
-				<action method="setTemplate" ifconfig="opc/paypal/status"><template>opc/lipp-js.phtml</template></action>
-			</block>
-			<block type="opc/braintree_datajs" name="braintree_payments_data_js">
-				<action method="setTemplate" ifconfig="payment/braintree/active"><template>braintree/data_js.phtml</template></action>
-			</block>
-            <block type="opc/braintree_form" name="payment.form.braintree">
-            	<action method="setTemplate" ifconfig="payment/braintree/active"><template>braintree/review_js.phtml</template></action>
-                <action method="setMethodInfo"></action>
-            </block>
+			<block type="opc/lipp" name="opc.lipp.js" as="" template="opc/lipp-js.phtml"></block>
 		</reference>
 	</opc_index_index>		
 	
 	<checkout_onepage_review>
 		<reference name="checkout.onepage.review.button">
-			<action method="setTemplate" ifconfig="opc/global/status"><template>opc/onepage/review/button.phtml</template></action>
+			<action method="setTemplate"><template>opc/onepage/review/button.phtml</template></action>
 		</reference>
+		
 		<reference name="checkout.onepage.agreements">
-			<action method="setTemplate" ifconfig="opc/global/status"><template>opc/onepage/agreements.phtml</template></action>
+			<action method="setTemplate"><template>opc/onepage/agreements.phtml</template></action>
+		</reference>
+				
+		<reference name="root">
+			<block type="opc/onepage_subscribed" template="opc/onepage/review/subscribed.phtml" name="opc.newsletters"/>			
 		</reference>		
 	</checkout_onepage_review>
 	
 	<!--  PAYPAL EXPRESS LIGHTBOX -->
 	<checkout_cart_index>
-	 	<reference name="head">					
-			<action method="addItem" ifconfig="opc/paypal/status"><type>skin_js</type><name>js/iwd/opc/lipp.js</name></action>    		
+	 	<reference name="head">		
+			<action method="addJs"><script>iwd/opc/lipp.js</script></action>				
 		</reference>
 		<reference name="before_body_end">
-			<block type="opc/lipp" name="opc.lipp.js" as="">
-				<action method="setTemplate" ifconfig="opc/paypal/status"><template>opc/lipp-js.phtml</template></action>
-			</block>
+			<block type="opc/lipp" name="opc.lipp.js" as="" template="opc/lipp-js.phtml"></block>
 		</reference>
 	</checkout_cart_index>
 	
@@ -129,8 +110,8 @@
     </customer_account_index>
 
     <customer_account_login>
-    	<reference name="head">           
-            <action method="addItem" ifconfig="opc/paypallogin/status"><type>skin_js</type><name>js/iwd/opc/login.js</name></action>    	
+    	<reference name="head">
+            <action method="addJs" ifconfig="opc/paypallogin/status"><script>iwd/opc/login.js</script></action>
         </reference>
         <reference name="customer_form_login">
             <action method="setTemplate"><template>opc/customer/form/login.phtml</template></action>
@@ -141,8 +122,8 @@
     </customer_account_login>
 
     <customer_account_create>
-    	<reference name="head">            
-            <action method="addItem" ifconfig="opc/paypallogin/status"><type>skin_js</type><name>js/iwd/opc/login.js</name></action>
+    	<reference name="head">
+            <action method="addJs" ifconfig="opc/paypallogin/status"><script>iwd/opc/login.js</script></action>
         </reference>
         <reference name="customer_form_register">
             <action method="setTemplate"><template>opc/customer/form/register.phtml</template></action>
@@ -160,5 +141,6 @@
              <block type="opc/customer_account_asklink" name="opc.paypal.auth" template="opc/customer/account/asklink.phtml"/>
          </reference>
     </opc_paypal_asklink>
+
 
 </layout>
