--- a/app/design/frontend/base/default/template/opc/onepage/comment.phtml
+++ b/app/design/frontend/base/default/template/opc/onepage/comment.phtml
@@ -1,14 +1,12 @@
 <div class="comment-block">
-<h3><?php echo $this->__('Comment')?><span class='expand_plus'></span></h3>
-    <div  class="collapse-block hidden">
+<h3><?php echo $this->__('Comment')?></h3>
 	<form autocomplete="off">
-	    <div class="comment">
-	        <div class="comment-form">            
+	    <div class="discount">
+	        <div class="discount-form">            
 	            <div class="input-box">	                
 	                <textarea class="input-text" id="customer_comment" name="customer_comment"></textarea>
 	            </div>	            
 	        </div>
 	    </div>
 	</form>
-	</div>
 </div>
