--- a/app/design/frontend/base/default/template/opc/onepage/payment.phtml
+++ b/app/design/frontend/base/default/template/opc/onepage/payment.phtml
@@ -2,12 +2,12 @@
 //<![CDATA[
     var quoteBaseGrandTotal = <?php echo (float)$this->getQuoteBaseGrandTotal(); ?>;
     var checkQuoteBaseGrandTotal = quoteBaseGrandTotal;
-    var payment = new Payment('co-payment-form', '<?php echo $this->getUrl('checkout/onepage/savePayment', array('_secure' => $this->getRequest()->isSecure())) ?>');
+    var payment = new Payment('co-payment-form', '<?php echo $this->getUrl('checkout/onepage/savePayment') ?>');
     var lastPrice;
 //]]>
 </script>
 <form action="" id="co-payment-form">	
-    <fieldset id="checkout-payment-method-load">
+    <fieldset>
         <?php echo $this->getChildHtml('methods') ?>
     </fieldset>
 </form>
