--- a/app/design/frontend/base/default/template/opc/wrapper.phtml
+++ b/app/design/frontend/base/default/template/opc/wrapper.phtml
@@ -1,30 +1,11 @@
 <script type="text/javascript">countryRegions = <?php echo $this->helper('directory')->getRegionJson() ?></script>
-<?php
-echo $this->getDesignStyles();
-$package = Mage::getDesign()->getPackageName();
-$theme = Mage::getDesign()->getTheme('frontend');
-?>
-<div class="opc-wrapper-opc design_package_<?php echo $package;?> design_theme_<?php echo $theme;?>">
-    <h2><?php echo $this->__('Checkout')?></h2>
-	<div class="opc-menu">
+<div class="opc-wrapper-opc">
+	<h2><?php echo $this->__('Checkout')?></h2>
+	<p><?php echo $this->__('Fill in the Fields below to complete your purchase!')?></p>
 	
-	    <?php echo $this->getChildHtml('paypal.button')?>
-	            
-        <?php if (!Mage::getSingleton('customer/session')->isLoggedIn()):?>
-    		<?php echo $this->getChildHtml('login');?>	
-    	<?php endif;?>
-    	
-    	
-    	<div class="right review-menu-block">
-    	  <a class="review-total"><?php echo Mage::helper('opc')->getGrandTotal()?></a>   
-    	  <span class="polygon"></span>
-    	  <div class="hidden" id="opc-review-block">
-		      <?php echo $this->_getReviewHtml()?>
-		  </div>
-		</div>
-	   <div class="clear move-columns"></div>
-	</div>
-	
+	<?php if (!Mage::getSingleton('customer/session')->isLoggedIn()):?>
+		<?php echo $this->getChildHtml('login');?>	
+	<?php endif;?>
 	<div class="clear"></div>
 
     <div class="opc-col-left">
@@ -39,7 +20,7 @@ $theme = Mage::getDesign()->getTheme('frontend');
     </div>
 
     <div class="opc-col-center">
-       <?php if (!$this->getOnepage()->getQuote()->isVirtual()):?>
+    	<?php if (!$this->getOnepage()->getQuote()->isVirtual()):?>
     	<div class="shipping-block">
         	<h3><?php echo $this->__('Shipping Method')?></h3>
         	<div id="shipping-block-methods">
@@ -47,54 +28,36 @@ $theme = Mage::getDesign()->getTheme('frontend');
 			</div>
 		</div>
 		<?php endif;?>
-		
-		<?php if(Mage::helper('opc')->isShowDiscount()):?>
-		<div class="discount-block">
-			<h3><?php echo $this->__('Discount Codes')?><span class='expand_plus'></span></h3>
-			<div  class="collapse-block hidden">
-			     <?php echo $this->getChildhtml('coupon');?>
-			</div>
-		</div>
-		<?php endif;?>
-
-		<?php if(Mage::helper('opc')->isShowComment()):?>
-			<?php echo $this->getChildhtml('customer.comment');?>
-		<?php endif;?>
-    </div>
-
-    <div class="opc-col-right">
 		<div class="payment-block <?php if ($this->getOnepage()->getQuote()->isVirtual()):?>clear-margin<?php endif;?>">
 			<h3><?php echo $this->__('Payment Method')?></h3>
 			<?php echo $this->getChildHtml('payment')//$this->_getPaymentMethodsHtml();?>
 		</div>
-    
-        <?php if (Mage::getConfig()->getModuleConfig('IWD_OnepageCheckoutSignature')->is('active', 'true')): ?>
-            <div class="signature-block">
-                <h3><?php echo $this->__('Signature')?><span class='expand_plus'></span></h3>
-                <div  class="collapse-block hidden">
-                    <?php echo $this->getChildhtml('opcsignature');?>
-                </div>
-            </div>
-        <?php endif;?>
+		
+		<div class="discount-block">
+			<h3><?php echo $this->__('Discount Codes')?></h3>
+			<?php echo $this->getChildhtml('coupon');?>
+		</div>
 
-		<div class="opc-review-actions" id="checkout-review-submit">
-		      <h5 class="grand_total"><?php echo $this->__('Grand Total')?><?php echo Mage::helper('opc')->getGrandTotal()?></h5>
-		      <?php echo $this->getChildHtml('agreements')?>
-		      <?php echo $this->getChildHtml('opc.newsletters');?>
-		      <button type="button" title="<?php echo $this->__('Place Order Now') ?>" class="button btn-checkout opc-btn-checkout"><span><span><?php echo $this->__('Place Order Now') ?></span></span></button>
+		<?php if(Mage::helper('opc')->isShowComment()):?>
+			<?php echo $this->getChildhtml('customer.comment');?>
+		<?php endif;?>
+
+    </div>
+
+    <div class="opc-col-right">
+        <h3><?php echo $this->__('Review Your Order')?></h3>
+        <div id="opc-review-block">
+		<?php echo $this->_getReviewHtml()?>
 		</div>
     </div>
 </div>
 <script>
-	var vopc = '<?php echo Mage::getConfig()->getModuleConfig("IWD_Opc")->version;?>';
 	IWD.OPC.Checkout.config = '<?php echo $this->getJsonConfig()?>';
 	<?php if ($this->getOnepage()->getQuote()->isVirtual()):?>
 	IWD.OPC.Checkout.isVirtual = true;
 	<?php endif;?>	 
 </script>
 
-<div id="agree_error" style="display:none !important;"><?php echo $this->__('Please agree to all the terms and conditions before placing the order.');?></div>
-<div id="pssm_msg" style="display:none !important;"><?php echo $this->__('Please specify shipping method');?></div>
 <div class="opc-ajax-loader">
 	<div id="floatingCirclesG">
 		<div class="f_circleG" id="frotateG_01"></div>
@@ -107,7 +70,7 @@ $theme = Mage::getDesign()->getTheme('frontend');
 		<div class="f_circleG" id="frotateG_08"></div>
 	</div>
 </div>
-<div class="opc-message-wrapper design_package_<?php echo $package;?> design_theme_<?php echo $theme;?>">
+<div class="opc-message-wrapper">
 	
 	<div class="opc-messages">
 		<a class="close-message-wrapper"></a>
